name:                dnd-dice
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/sseefried/dnd-dice#readme
license:             BSD3
license-file:        LICENSE
author:              Sean Seefried
maintainer:          sean.seefried@gmail.com
copyright:           2016 Sean Seefried
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , unordered-containers
  default-language:    Haskell2010

executable dnd-dice
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dnd-dice
  default-language:    Haskell2010

test-suite dnd-dice-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dnd-dice
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sseefried/dnd-dice
